--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/vow": "^1.0.17",
+    "mysql": "^2.18.1",
     "sqlite3": "^5.0.1"
   },
   "devDependencies": {},
